# ArchVelo

./: .gitignore  Apply_multimodels.ipynb  ArchVelo.py  ArchVelo_data_preparation.ipynb  ArchVelo_generate_velocities.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt
.ipynb_checkpoints/: ArchVelo_data_preparation-checkpoint.ipynb  README-checkpoint.md  Test_AA-checkpoint.ipynb
ArchVelo/: ArchVelo_all.py  __init__.py  metrics.py
ArchVelo/.ipynb_checkpoints/: ArchVelo_all-checkpoint.py
ArchVelo/archetypal_regression/: archetypes.py  archetypes_regression.py
archetypal_regression/: archetypes.py  util_atac.py  util_regression.py
archetypal_regression/.ipynb_checkpoints/: archetypes-checkpoint.py  util-checkpoint.py
demo/.ipynb_checkpoints/: 4_Compare_latent_times-checkpoint.ipynb  5_CBDir-checkpoint.ipynb
grouping_results/Mouse_brain/archetypes/50_iter/: C_train_on_peaks_8_comps.csv  cell_test_on_peaks_8_comps.csv  (+2 more)
grouping_results/test/: C_train_on_peaks_8_comps.csv  cell_test_on_peaks_8_comps.csv  cell_train_on_peaks_8_comps.csv  peak_on_peaks_8_comps.csv
processed_data/: Readme.txt  arches.h5ad  gene_weights_raw.csv  testc.csv  top_lik.p  trainc.csv
processed_data/.ipynb_checkpoints/: Readme-checkpoint.txt
seurat_wnn/: nn_dist.txt  nn_idx.txt
src/ArchVelo/: __init__.py  evaluation.py  jitted_code.py  metrics.py  modeling.py  optimization.py  plotting.py  preprocessing.py  utils.py
src/ArchVelo/archetypal_regression/: __init__.py  archetypes.py  archetypes_regression.py  archetypes_regression_old.py  util_atac.py  util_regression.py
(+4 files in other folders)
