[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ArchVelo"
version = "0.1.0"
authors = [
  { name="Maria Avdeeva", email="mavdeeva@flatironinstitute.org" },
]
description = "ArchVelo is a method of inferring RNA velocity from scRNA+ATAC-seq data."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
"numpy ==  1.24.4",
"pandas ==  2.0.3",
"scipy ==  1.10.1",
"scanpy ==  1.9.8",
"anndata ==  0.9.2",
"scvelo ==  0.3.2",
"multivelo ==  0.1.3",
"matplotlib ==  3.7.5",
"seaborn ==  0.13.2",
"scikit-learn == 1.3.2",
"loompy == 3.0.7",
"umap-learn == 0.5.7",
"h5py == 3.10.0",
"numba == 0.58.1",
"tqdm == 4.67.1",
"joblib == 1.4.2",
"ipykernel == 6.29.4",
"ipywidgets == 7.7.1",
"pytest == 7.2.1",
"jax == 0.4.3",
#"jaxlib == 0.4.3",
"torch == 2.3.1"
#"torch == 2.3.1+cu121"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD 3-Clause License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pritykinlab/ArchVelo"
Issues = "https://github.com/pritykinlab/ArchVelo/issues"
